Navbar design added

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <!-- /* ============= Header section start ============= */ -->
-    <header class="container">
+    <header>
       <nav>
         <div class="logo">
-          <img src="./assets/Icon.png" alt="" />
-          <h3>Nexcent</h3>
+          <img src="./assets/brand-logo/Icon.png" alt="" />
+          <img class="logo-text" src="./assets/brand-logo/Nexcent.png" alt="" />
         </div>
         <ul>
           <li><a href="#">Home</a></li>
@@ -23,7 +23,7 @@
           <li><a href="#">FAQ</a></li>
         </ul>
         <div class="authentication">
-          <button>Login</button>
+          <button class="primary-btn login-btn">Login</button>
           <button class="primary-btn">Sign up</button>
         </div>
       </nav>
