Banner section created

--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
           <button class="primary-btn">Sign up</button>
         </div>
       </nav>
+      <div class="container banner">
+        <div class="banner-right">
+          <h2>Lessons and insights <span>from 8 years</span></h2>
+          <p>
+            Where to grow your business as a photographer: site or social media?
+          </p>
+          <button class="primary-btn">Register</button>
+        </div>
+        <div class="banner-left">
+          <img src="./assets/Illustration.png" alt="" />
+        </div>
+      </div>
     </header>
   </body>
 </html>
