--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- /* ============= Header section start ============= */ -->
     <header>
-      <nav>
+      <nav class="hid">
         <div class="logo">
           <img src="./assets/brand-logo/Icon.png" alt="" />
           <img class="logo-text" src="./assets/brand-logo/Nexcent.png" alt="" />
