Our client section create and responsive for tow devices

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- /* ============= Header section start ============= */ -->
     <header>
-      <nav class="hid">
+      <nav>
         <div class="logo">
           <img src="./assets/brand-logo/Icon.png" alt="" />
           <img class="logo-text" src="./assets/brand-logo/Nexcent.png" alt="" />
@@ -40,5 +40,57 @@
         </div>
       </div>
     </header>
+    <main>
+      <!-- /* ============= Our Clients section start ============= */ -->
+      <section class="container our-clients-content">
+        <h3 class="section-title">Our Clients</h3>
+        <p class="short-description">
+          We have been working with some Fortune 500+ clients
+        </p>
+        <div class="clients-img-content">
+          <img src="./assets/clients-images/Logo.png" alt="" />
+          <img src="./assets/clients-images/Logo (1).png" alt="" />
+          <img src="./assets/clients-images/Logo (2).png" alt="" />
+          <img src="./assets/clients-images/Logo (3).png" alt="" />
+          <img src="./assets/clients-images/Logo (4).png" alt="" />
+          <img src="./assets/clients-images/Logo (5).png" alt="" />
+          <img src="./assets/clients-images/Logo (6).png" alt="" />
+        </div>
+        <h3 class="section-title">
+          Manage your entire community <br />
+          in a single system
+        </h3>
+        <p style="margin-top: 12px">Who is Nextcent suitable for?</p>
+        <div class="client-card-container">
+          <div class="card">
+            <img src="./assets/community-images/Icon.png" alt="" />
+            <h3 class="card-title">Membership Organisations</h3>
+            <p>
+              Our membership management software provides full automation of
+              membership renewals and payments
+            </p>
+          </div>
+          <div class="card">
+            <img src="./assets/community-images/Icon (2).png" alt="" />
+            <h3 class="card-title">National Associations</h3>
+            <p>
+              Our membership management software provides full automation of
+              membership renewals and payments
+            </p>
+          </div>
+          <div class="card">
+            <img src="./assets/community-images/Icon (2).png" alt="" />
+            <h3 class="card-title">
+              Clubs And <br />
+              Groups
+            </h3>
+            <p>
+              Our membership management software provides full automation of
+              membership renewals and payments
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
