Added Unseen section created and responsive for tow device

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <p class="short-description">
           We have been working with some Fortune 500+ clients
         </p>
+        <!-- Clients images here -->
         <div class="clients-img-content">
           <img src="./assets/clients-images/Logo.png" alt="" />
           <img src="./assets/clients-images/Logo (1).png" alt="" />
@@ -61,6 +62,7 @@
           in a single system
         </h3>
         <p style="margin-top: 12px">Who is Nextcent suitable for?</p>
+        <!-- Three Card here -->
         <div class="client-card-container">
           <div class="card">
             <img src="./assets/community-images/Icon.png" alt="" />
@@ -71,7 +73,7 @@
             </p>
           </div>
           <div class="card">
-            <img src="./assets/community-images/Icon (2).png" alt="" />
+            <img src="./assets/community-images/Icon (1).png" alt="" />
             <h3 class="card-title">National Associations</h3>
             <p>
               Our membership management software provides full automation of
@@ -88,6 +90,26 @@
               Our membership management software provides full automation of
               membership renewals and payments
             </p>
+          </div>
+        </div>
+        <!-- Unseen of spending -->
+        <div class="unseen-container">
+          <div class="unseen-img">
+            <img src="./assets/Frame 35.png" alt="" />
+          </div>
+          <div class="unseen-text-content">
+            <h2 class="section-title">
+              The unseen of spending three years at Pixelgrade
+            </h2>
+            <p class="unseen-description-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit
+              amet justo ipsum. Sed accumsan quam vitae est varius fringilla.
+              Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
+              tristique iaculis. Nullam pulvinar sit amet risus pretium auctor.
+              Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec
+              elementum pulvinar odio.
+            </p>
+            <button class="primary-btn">Learn More</button>
           </div>
         </div>
       </section>
