Helping section created and full  responsive

--- a/index.html
+++ b/index.html
@@ -113,6 +113,75 @@
           </div>
         </div>
       </section>
+      <!-- /* ============= Helping business section start ============= */ -->
+      <section class="helping-section">
+        <div class="container helping-content">
+          <div class="helping-column-1">
+            <h3 class="section-title" style="max-width: 410px">
+              Helping a local <br />
+              <span> business reinvent itself</span>
+            </h3>
+            <p class="helping-text">
+              We reached here with our hard work and dedication
+            </p>
+          </div>
+          <div class="helping-column-2">
+            <div class="local-business-count">
+              <img src="./assets/helping-images/Icon.png" alt="" />
+              <div>
+                <h3 class="section-title">2,245,341</h3>
+                <p>Members</p>
+              </div>
+            </div>
+            <div class="local-business-count">
+              <img src="./assets/helping-images/Icon (1).png" alt="" />
+              <div>
+                <h3 class="section-title">46,328</h3>
+                <p>Clubs</p>
+              </div>
+            </div>
+            <div class="local-business-count">
+              <img src="./assets/helping-images/Icon (3).png" alt="" />
+              <div>
+                <h3 class="section-title">828,867</h3>
+                <p>Event Bookings</p>
+              </div>
+            </div>
+            <div class="local-business-count">
+              <img src="./assets/helping-images/Icon (2).png" alt="" />
+              <div>
+                <h3 class="section-title">1,926,436</h3>
+                <p>Payments</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /* ============= Design your site section start ============= */ -->
+      <section class="container">
+        <div class="unseen-container">
+          <div class="unseen-img">
+            <img src="./assets/pana.png" alt="" />
+          </div>
+          <div class="unseen-text-content">
+            <h2 class="section-title">
+              How to design your site footer like we did
+            </h2>
+            <p class="unseen-description-text">
+              Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor,
+              augue nec tincidunt molestie, massa nunc varius arcu, at
+              scelerisque elit erat a magna. Donec quis erat at libero ultrices
+              mollis. In hac habitasse platea dictumst. Vivamus vehicula leo
+              dui, at porta nisi facilisis finibus. In euismod augue vitae nisi
+              ultricies, non aliquet urna tincidunt. Integer in nisi eget nulla
+              commodo faucibus efficitur quis massa. Praesent felis est, finibus
+              et nisi ac, hendrerit venenatis libero. Donec consectetur faucibus
+              ipsum id gravida.
+            </p>
+            <button class="primary-btn">Learn More</button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
