Meet our customer section responsive added

--- a/index.html
+++ b/index.html
@@ -182,6 +182,40 @@
           </div>
         </div>
       </section>
+      <!-- /* ============= Meet all customers section start ============= */ -->
+      <section class="customers-section">
+        <div class="container customer-all-content">
+          <div class="customer-image">
+            <img src="./assets/image-9.png" alt="" />
+          </div>
+          <div class="customer-text-content">
+            <p>
+              Maecenas dignissim justo eget nulla rutrum molestie. Maecenas
+              lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu
+              enim metus. Vivamus sed libero ornare, tristique quam in, gravida
+              enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet
+              elit at ligula molestie, nec molestie mi blandit. Suspendisse
+              cursus tellus sed augue ultrices, quis tristique nulla sodales.
+              Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse
+              potenti. Quisque malesuada enim sapien, vitae placerat ante
+              feugiat eget. Quisque vulputate odio neque, eget efficitur libero
+              condimentum id. Curabitur id nibh id sem dignissim finibus ac sit
+              amet magna.
+            </p>
+            <h3 class="customer-Association"><span>Tim Smith -</span></h3>
+            <p>British Dragon Boat Racing Association</p>
+            <div class="customer-box">
+              <img src="./assets/clients-images/Logo.png" alt="" />
+              <img src="./assets/clients-images/Logo (1).png" alt="" />
+              <img src="./assets/clients-images/Logo (2).png" alt="" />
+              <img src="./assets/clients-images/Logo (3).png" alt="" />
+              <img src="./assets/clients-images/Logo (4).png" alt="" />
+              <img src="./assets/clients-images/Logo (5).png" alt="" />
+              <h3 class="all-cstmr"><span>Meet all Customers</span></h3>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
