Marketing section created and resposive for tow device

--- a/index.html
+++ b/index.html
@@ -211,7 +211,71 @@
               <img src="./assets/clients-images/Logo (3).png" alt="" />
               <img src="./assets/clients-images/Logo (4).png" alt="" />
               <img src="./assets/clients-images/Logo (5).png" alt="" />
-              <h3 class="all-cstmr"><span>Meet all Customers</span></h3>
+              <h3 class="all-cstmr">
+                <span>Meet all Customers</span
+                ><img class="right-simbol" src="./assets/Right.png" alt="" />
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /* ============= Marketing section start ============= */ -->
+      <section class="container marketing-content">
+        <h3 class="section-title">Caring is the new marketing</h3>
+        <p class="m-description">
+          The Nexcent blog is the best place to read about the latest membership
+          insights, trends and more. See who's joining the community, read about
+          how our community are increasing their membership income and lot's
+          more.​
+        </p>
+        <div class="card-container">
+          <div class="marketing-card">
+            <img
+              class="card-img"
+              src="./assets/marketing-bg/image-18.png"
+              alt=""
+            />
+            <div class="card-text">
+              <p class="card-title">
+                Creating Streamlined Safeguarding Processes with OneRen
+              </p>
+              <a class="card-btn" href="#"
+                >Readmore
+                <img class="right-icon" src="./assets/Right.png" alt=""
+              /></a>
+            </div>
+          </div>
+          <div class="marketing-card">
+            <img
+              class="card-img"
+              src="./assets/marketing-bg/image-19.png"
+              alt=""
+            />
+            <div class="card-text">
+              <p class="card-title">
+                What are your safeguarding responsibilities and how can you
+                manage them?
+              </p>
+              <a class="card-btn" href="#"
+                >Readmore
+                <img class="right-icon" src="./assets/Right.png" alt=""
+              /></a>
+            </div>
+          </div>
+          <div class="marketing-card">
+            <img
+              class="card-img"
+              src="./assets/marketing-bg/image-20.png"
+              alt=""
+            />
+            <div class="card-text">
+              <p class="card-title">
+                Revamping the Membership Model with Triathlon Australia
+              </p>
+              <a class="card-btn" href="#"
+                >Readmore
+                <img class="right-icon" src="./assets/Right.png" alt=""
+              /></a>
             </div>
           </div>
         </div>
