Demo section created and resoinsiveness added

--- a/index.html
+++ b/index.html
@@ -280,6 +280,12 @@
           </div>
         </div>
       </section>
+      <section class="demo-section">
+        <div class="container">
+          <h2>Pellentesque suscipit fringilla libero eu.</h2>
+          <button class="primary-btn">Get a Demo</button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
