footer section created and full resposive for any devices

--- a/index.html
+++ b/index.html
@@ -287,5 +287,53 @@
         </div>
       </section>
     </main>
+    <!-- /* ============= Footer section start ============= */ -->
+    <footer class="footer-section">
+      <div class="footer-container">
+        <div class="footer-col">
+          <div class="brand-logo">
+            <img src="./assets/brand-logo/footer-Icon.png" alt="" />
+            <img src="./assets/brand-logo/Nexcent-tw.png" alt="" />
+          </div>
+          <div class="text">
+            <p>Copyright © 2020 Nexcent ltd.</p>
+            <p>All rights reserved</p>
+          </div>
+          <div class="socials">
+            <img src="./assets/social-icon/insta-Icons.png" alt="" />
+            <img src="./assets/social-icon/drible-Icons.png" alt="" />
+            <img src="./assets/social-icon/twitter-Icons.png" alt="" />
+            <img src="./assets/social-icon/youtube-Icons.png" alt="" />
+          </div>
+        </div>
+        <div class="footer-col">
+          <h3 class="col-title">Company</h3>
+          <div class="pages">
+            <p>About us</p>
+            <p>Blog</p>
+            <p>Contact us</p>
+            <p>Pricing</p>
+            <p>Testimonials</p>
+          </div>
+        </div>
+        <div class="footer-col">
+          <h3 class="col-title">Support</h3>
+          <div class="help-center">
+            <p>Help center</p>
+            <p>Terms of service</p>
+            <p>Legal</p>
+            <p>Privacy policy</p>
+            <p>Status</p>
+          </div>
+        </div>
+        <div class="footer-col">
+          <h3 class="col-title">Stay up to date</h3>
+          <form action="">
+            <input required type="text" placeholder="Your email address" />
+            <button><img src="./assets/social-icon/send.png" alt="" /></button>
+          </form>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
